# notion-calendar

./: .env.template  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  pyproject.toml
doc/: webapp.http
notion_calendar/: notion_ics.py  sample_event.txt  webapp.py
