[tool.poetry]
name = "notion-calendar"
version = "0.1.0"
description = ""
authors = ["Roman Sobkuliak <r.sobkuliak@gmail.com>"]
readme = "README.md"
packages = [{include = "notion_calendar"}]

[tool.poetry.dependencies]
python = "^3.9"
icalendar = "^5.0.4"
Flask = "^2.2.3"
notion-client = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
